# meshmon

./: .dockerignore  .gitignore  .t56-handoff.md  .trivyignore.yaml  .yamllint.yml  CLAUDE.md  Cargo.toml  README.md  lefthook.yml
.cargo/: config.toml
.sqlx/: query-02019e5b97d0515c340f5ce894209af6c2f78ed9b2ab5c92aba6ef7705a59303.json  query-02bccad4d4f5ba0bc30d1f9a695599e693ecf701a8172a908ec95275726db504.json  query-03a2dd661269183aae8beae7c6e761964843f6b3e7397a63858a219496fececb.json  query-046c2be02100ed028e706043789954fa8688c2a245814785e3db5747a7d02e78.json  (+257 more)
crates/agent/: Cargo.toml
crates/agent/src/: api.rs  bootstrap.rs  command_service.rs  config.rs  emitter.rs  lib.rs  main.rs  route.rs  state.rs  stats.rs  supervisor.rs  tunnel.rs
crates/agent/src/command/: README.md  measurements.rs  mod.rs
crates/agent/src/probing/: README.md  echo_tcp.rs  echo_udp.rs  icmp.rs  icmp_pool.rs  mod.rs  oneshot.md  oneshot.rs  tcp.rs  trippy.rs  udp.rs  wire.rs
crates/agent/tests/: command_measurements_stub.rs  integration.rs  oneshot_skeleton.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: deployment.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: meshmon.proto
crates/protocol/src/: ip.rs  lib.rs
crates/protocol/tests/: proto_roundtrip.rs  roundtrip.rs
crates/revtunnel/: Cargo.toml
crates/revtunnel/src/: agent.rs  byte_adapter.rs  error.rs  lib.rs  service.rs
crates/service/: Cargo.toml  README.md  build.rs
crates/service/migrations/: 20260414120000_initial.down.sql  20260414120000_initial.up.sql  20260417120000_add_probe_ports.down.sql  20260417120000_add_probe_ports.up.sql  20260418120000_path_overview_protocol_index.down.sql  20260418120000_path_overview_protocol_index.up.sql  20260418130000_grafana_readonly_role.down.sql  20260418130000_grafana_readonly_role.up.sql  20260419120000_ip_catalogue.down.sql  20260419120000_ip_catalogue.up.sql  20260420120000_campaigns.down.sql  20260420120000_campaigns.up.sql  20260421120000_campaigns_dispatch.down.sql  20260421120000_campaigns_dispatch.up.sql  20260421130000_campaign_evaluations.down.sql  20260421130000_campaign_evaluations.up.sql  20260421130001_campaign_pairs_kind_unique.down.sql  20260421130001_campaign_pairs_kind_unique.up.sql  20260421130002_campaign_evaluated_notify.down.sql  20260421130002_campaign_evaluated_notify.up.sql  20260422120000_ip_hostname_cache.down.sql  20260422120000_ip_hostname_cache.up.sql  20260424000000_loss_ratio_rename.down.sql  20260424000000_loss_ratio_rename.up.sql  20260424120000_measurement_source.down.sql  20260424120000_measurement_source.up.sql  20260424130000_campaign_evaluation_rows.down.sql  20260424130000_campaign_evaluation_rows.up.sql  20260425000000_campaign_evaluation_guardrails.down.sql  20260425000000_campaign_evaluation_guardrails.up.sql  20260425000001_campaign_evaluation_pair_details_index.down.sql  20260425000001_campaign_evaluation_pair_details_index.up.sql  20260425000002_campaign_evaluation_candidate_aggregates.down.sql  20260425000002_campaign_evaluation_candidate_aggregates.up.sql  20260426000000_campaigns_edge_candidate.down.sql  20260426000000_campaigns_edge_candidate.up.sql
crates/service/src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  probing.rs  registry.rs  shutdown.rs  state.rs  tls.rs  vm_query.rs
crates/service/src/campaign/: README.md  baseline_vm.rs  broker.rs  cursor.rs  dispatch.md  dispatch.rs  dto.rs  eval.rs  evaluation_repo.rs  events.rs  handlers.rs  listener.rs  mod.rs  model.rs  repo.rs  rpc_dispatcher.rs  scheduler.rs  sse.rs  writer.rs
crates/service/src/campaign/eval/: edge_candidate.rs  legs.rs  mod.rs  routes.rs
crates/service/src/catalogue/: README.md  dto.rs  events.rs  facets.rs  handlers.rs  mod.rs  model.rs  parse.rs  repo.rs  shapes.rs  sort.rs  sse.rs
crates/service/src/enrichment/: README.md  mod.rs  runner.rs
crates/service/src/enrichment/providers/: ipgeolocation.rs  maxmind.rs  mod.rs  rdap.rs  whois.rs
crates/service/src/grpc/: agent_api.rs  mod.rs
crates/service/src/hostname/: README.md  backend.rs  handlers.rs  ip_canon.rs  mod.rs  refresh_limit.rs  repo.rs  resolver.rs  session.rs  sse.rs  stamp.rs
crates/service/src/http/: README.md  alertmanager_proxy.rs  alerts_proxy.rs  auth.rs  grafana_proxy.rs  health.rs  history.rs  http_client.rs  metrics_auth.rs  metrics_proxy.rs  mod.rs  openapi.rs  path_overview.rs  proxy_common.rs  session.rs  user_api.rs  web_config.rs
crates/service/src/ingestion/: json_shapes.rs  last_seen.rs  metrics.rs  mod.rs  pg_writer.rs  queue.rs  validator.rs  vm_writer.rs
crates/service/tests/: agent_api_concurrency.rs  agent_api_config.rs  agent_api_metrics.rs  agent_api_open_tunnel.rs  agent_api_rate_limit.rs  agent_api_register.rs  agent_api_snapshot.rs  agent_api_targets.rs  alert_metrics_contract.rs  alertmanager_proxy.rs  alerts_validation.rs  auth.rs  campaign_detail.rs  campaign_evaluate.rs  campaign_evaluate_edge_candidate_validation.rs  campaign_evaluate_edge_candidate_vm_roster.rs  campaign_evaluate_edge_case_single_source.rs  campaign_evaluate_edge_case_x_equals_b.rs  campaign_evaluate_edge_pairs_endpoint.rs  campaign_evaluate_existing_modes_regression.rs  campaign_evaluate_max_hops.rs  campaign_evaluation_guardrails.rs  campaign_evaluation_pair_details_endpoint.rs  campaign_http.rs  campaign_migration.rs  campaign_repo.rs  campaign_scheduler.rs  campaigns_concurrent_reset.rs  campaigns_dispatch_e2e.rs  campaigns_dispatch_metrics.rs  campaigns_dispatch_migration.rs  campaigns_edge_candidate_migration_up_down_round_trips.rs  campaigns_rate_limit.rs  campaigns_rpc_dispatcher.rs  campaigns_sse_test.rs  campaigns_writer.rs  catalogue_enrichment_integration.rs  catalogue_filters.rs  catalogue_http.rs  catalogue_map.rs  (+33 more)
crates/service/tests/common/: grpc_harness.rs  mod.rs
deploy/: .env.example  .gitignore  agent.env.example  (+7 more)
xtask/: Cargo.toml
xtask/src/: main.rs  signal.rs  sqlx_prepare.rs  test_cmd.rs  test_db.rs
xtask/tests/: sqlx_prepare_lifecycle.rs  test_db_lifecycle.rs
(+353 files in other folders)
