[workspace]
resolver = "2"
members = [
    "crates/service",
    "crates/agent",
    "crates/protocol",
    "crates/common",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "AGPL-3.0-or-later"
repository = "https://github.com/w3champions/meshmon"
authors = ["meshmon contributors"]

[workspace.dependencies]
# Shared dependency versions. Downstream tasks add entries here.
anyhow = "1"
arc-swap = "1"
axum = "0.8"
axum-extra = "0.12"
axum-login = "0.18"
ctor = "0.10"
# tower_governor 0.8 depends on governor 0.10. We name
# `::governor::middleware::NoOpMiddleware` in the concrete type of our
# login rate-limit layer alias, so the service crate needs `governor` as
# a direct dep. Pin to match tower_governor's transitive version.
governor = "0.10"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false }
testcontainers = "0.27"
thiserror = "2"
tokio = "1"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
tower-sessions = { version = "0.14", default-features = false, features = ["memory-store"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

argon2 = "0.5"
password-hash = { version = "0.6", features = ["alloc", "phc"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
