[workspace]
resolver = "2"
members = [
    "crates/service",
    "crates/agent",
    "crates/protocol",
    "crates/common",
    "crates/revtunnel",
    "crates/e2e",
    "xtask",
]
default-members = [
    "crates/service",
    "crates/agent",
    "crates/protocol",
    "crates/common",
    "crates/revtunnel",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "AGPL-3.0-or-later"
repository = "https://github.com/w3champions/meshmon"
authors = ["meshmon contributors"]

[workspace.dependencies]
# Shared dependency versions. Downstream tasks add entries here.
anyhow = "1"
arc-swap = "1"
async-stream = "0.3"
async-trait = "0.1.89"
axum = "0.8"
axum-extra = "0.12"
axum-login = "0.18"
axum-prometheus = "0.10"
axum-reverse-proxy = { version = "1.3", default-features = false }
base64 = "0.22"
bytes = "1"
ctor = "0.10"
ctrlc = { version = "3", features = ["termination"] }
dashmap = "6"
futures = "0.3"
futures-util = "0.3"
# Named directly because our `LoginRateLimitLayer` alias uses
# `governor::middleware::NoOpMiddleware`, which `tower_governor` does not
# re-export. Bump this in lockstep with `tower_governor`: the minor
# version must match what `tower_governor` pulls in transitively, or the
# type alias will fail to unify.
governor = "0.10"
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }
icann-rdap-client = "0.0.28"
icann-rdap-common = "0.0.28"
# Enumerates local network interface IPs (POSIX + Windows); used by the
# upstream self-referential guard to detect wildcard-bind recursion.
if-addrs = "0.15"
pin-project-lite = "0.2"
prost = "0.14"
proptest = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
sqlx = { version = "0.8", default-features = false }
testcontainers = "0.27"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt", "io", "compat"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
tower-sessions = { version = "0.14", default-features = false, features = ["memory-store"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
trippy-core = "0.13"
url = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

argon2 = "0.5"
password-hash = { version = "0.6", features = ["alloc", "phc"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
rustls-pemfile = "2"
subtle = "2"
tokio-rustls = "0.26"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

maxminddb = "0.27"
memory-serve = "2.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
moka = { version = "0.12.15", features = ["future"] }
prometheus-reqwest-remote-write = "0.5"
snap = "1"
surge-ping = "0.8"
whois-rust = "1.6"
wiremock = "0.6"
yamux = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev.package.sqlx-macros]
opt-level = 3
