[package]
name = "meshmon-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "meshmon-agent"
path = "src/main.rs"

[dependencies]
meshmon-protocol = { path = "../protocol" }
meshmon-revtunnel = { path = "../revtunnel" }
anyhow.workspace = true
dashmap.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
socket2.workspace = true
subtle.workspace = true
surge-ping.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls-native-roots"] }
trippy-core.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest = { workspace = true }
serial_test = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
# `net` feature is required for `TcpListenerStream` used by the integration
# test's mock gRPC server. Currently pulled in transitively via `tonic`, but
# declared explicitly so the test does not break if the transitive chain
# changes.
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
