[package]
name = "meshmon-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
