[package]
name = "meshmon-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
protoc-bin-vendored = "3"
