[package]
name = "meshmon-revtunnel"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt", "io-util"] }
tokio-util = { workspace = true, features = ["io", "compat"] }
tonic = { workspace = true }
tracing = { workspace = true }
yamux = { workspace = true }

meshmon-protocol = { path = "../protocol" }

tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
