[package]
name = "meshmon-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "meshmon-service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
axum-prometheus = { workspace = true }
base64 = { workspace = true }
memory-serve = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
meshmon-protocol = { path = "../protocol" }
meshmon-revtunnel = { path = "../revtunnel" }
prometheus-reqwest-remote-write = { workspace = true }
snap = { workspace = true }
chrono = { workspace = true }
governor = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
password-hash = { workspace = true }
reqwest = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "ipnetwork",
    "json",
] }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower_governor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
metrics-util = "0.20"
prost = { workspace = true }
snap = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }  # for `ServiceExt::oneshot` in handler tests
uuid = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
memory-serve = { workspace = true }
